progress is slow but will try to improve

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>An Appreciation of Sir Terry Pratchett</title>
 </head>
 <body>
     <header>
@@ -22,10 +22,23 @@
     <main>
         <section id="section1" class="pageSection">
             <div class="sectionDiv">
-                <div class="upperDiv">
-                    <p>Sir Terry Pratchet</p>
+                
+                <div class="mainDiv" id="pterryMainDiv">
+                    <div id="pterryMainDivleft">
+                        <div id="pterryimagewrapper">
+                            <img id="TerryPratchettPic" src="TerryPratchettPic.png">
+                        </div>
+                        <div id="pterrynamewrapper">
+                            <h1 id="pterryname">Terence David John Pratchett</h1>
+                            <p>A funny man</p>
+                        </div>
+                    </div>
+                    <div id="pterryMainDivright">
+                        <div id="lefttextwrapper">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe dolorum exercitationem voluptate nisi placeat, molestias molestiae repudiandae? Iste optio eos, fugiat itaque porro doloremque, possimus deleniti quos, eligendi vero consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe dolorum exercitationem voluptate nisi placeat, molestias molestiae repudiandae? Iste optio eos, fugiat itaque porro doloremque, possimus deleniti quos, eligendi vero consequatur.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="mainDiv"></div>
             </div>
         </section> 
 
@@ -34,7 +47,11 @@
                 <div class="upperDiv">
                     <p>Books</p>
                 </div>
-                <div class="mainDiv"></div>
+                <div class="mainDiv">
+                    <div class="lrborder">
+
+                    </div>
+                </div>
             </div>
         </section> 
 
@@ -43,7 +60,11 @@
                 <div class="upperDiv">
                     <p>Awards</p>
                 </div>
-                <div class="mainDiv"></div>
+                <div class="mainDiv">
+                    <div class="lrborder">
+
+                    </div>
+                </div>
             </div>
         </section> 
     </main>
