Text field for book covers

--- a/index.html
+++ b/index.html
@@ -70,8 +70,14 @@
                                         <img class="slide" src="The_Wee_Free_Men.png">
                                         <img class="slide" src="Going_Postal.png">
                                     </div>
-                                    <div class="textslides bookcolour">
-                                        
+                                    <div class="textslides">
+                                        <div class="slide1 textdiv present bookcolour1">The Colour of Magic</div>
+                                        <div class="slide1 textdiv bookcolour2">Equal Rites</div>
+                                        <div class="slide1 textdiv bookcolour3">Mort</div>
+                                        <div class="slide1 textdiv bookcolour4">Guards! Guards!</div>
+                                        <div class="slide1 textdiv bookcolour5">Small Gods</div>
+                                        <div class="slide1 textdiv bookcolour6">The Wee Free Men</div>
+                                        <div class="slide1 textdiv bookcolour7">Going Postal</div>
                                     </div>
                                     
                                 </div>
