--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     
                     <div id="pterryMainDivright">
                         <div id="lefttextwrapper">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe dolorum exercitationem voluptate nisi placeat, molestias molestiae repudiandae? Iste optio eos, fugiat itaque porro doloremque, possimus deleniti quos, eligendi vero consequatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe dolorum exercitationem voluptate nisi placeat, molestias molestiae repudiandae? Iste optio eos, fugiat itaque porro doloremque, possimus deleniti quos, eligendi vero consequatur.</p>
+                            <p>Terry Pratchett was the acclaimed creator of the Global bestselling <span>Discworld</span> series, the first of which, <span>The Colour of Magic</span>, was published in 1983. In all, he was the author of over fifty bestselling books. His novels have been widely adapted for stage and screen, and he was the winner of multiple prizes, including the Carnegie Medal, as well as being awarded a knighthood for services to literature.</p>
                         </div>
                     </div>
 
