background in quotes section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="mainDiv">
                     <div class="lrborder" id="quotesDiv">
-                        <div id="upperQuotes" class="upperQuotes"></div>
+                        <div id="upperQuotes" class="bookcolour1 upperQuotes"></div>
                         <div id="lowerQuotes" class="lowerQuotes"></div>
                         <button id="QuoteRefreshBtn">More Quotes</button>
                     </div>
