added the discworld section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/pterrysection.css">
+    <link rel="stylesheet" href="./CSS/discworldsection.css">
     <link rel="stylesheet" href="./CSS/booksection.css">
     <link rel="stylesheet" href="./CSS/quotessection.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,11 +59,22 @@
         <section id="section2" class="pageSection">
             <div class="sectionDiv">
                 <div class="upperDiv">
-                    <p>The Discworld</p>
+                    <p class="discheadingdiv">The Discworld</p>
                 </div>
                 <div class="mainDiv">
-                    <div class="lrborder">
-                        <p></p>
+                    <div class="lrborder discworldtextdiv">
+                        <div class="discheadingdiv">
+                            <h1 class="discworldheading">A planet sized Disc, sitting on the backs of 4 giant elephants, which in turn stands on the back of a Star Turtle, named, Great A'tuin.</h1>
+                        </div>
+                        <div class="disctextdiv">
+                            <div class="discimagediv">
+                                <img class="discimage" src="../Images/The_Discworld.png">
+                                <p class="discimagetext">The Discworld</p>
+                                <p class="discimagetext artist">By josh kirby</p>
+                            </div>
+                            <p class="discworldtext">This is an absurd fantasy world created by Terry Pratchett, to create satirical parellels with our real world. The series consists a total of 41 books. It starts from <span>The Colour OF Magic</span> to <span>The Sheperd's Crown</span> in the order of publication. But you dont have to read the Discworld in that order. The books follows many different stories and characters. The setting is the same but the stories are different. The whole Discworld can be seperated into many sub-series. </p>
+
+                        </div>                        
                     </div>
                 </div>
             </div>
@@ -123,7 +135,7 @@
         <section id="section5" class="pageSection">
             <div class="sectionDiv">
                 <div class="upperDiv">
-                    <p>Quotes</p>
+                    <p id="quoteshead" class="bookcolour1">Quotes</p>
                 </div>
                 <div class="mainDiv">
                     <div class="lrborder" id="quotesDiv">
