fixed discworld image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="disctextdiv">
                             <div class="discimagediv">
-                                <img class="discimage" src="../Images/The_Discworld.png">
+                                <img class="discimage" src="./Images/The_Discworld.png">
                                 <p class="discimagetext">The Discworld</p>
                                 <p class="discimagetext artist">By josh kirby</p>
                             </div>
