added some changes

--- a/index.html
+++ b/index.html
@@ -93,13 +93,43 @@
                             <div class="slider">
                                 <div class="slides">
                                     <div class="imgslides">
-                                        <img class="slide present" src="./Images/The_Colour_Of_Magic.png">
-                                        <img class="slide" src="./Images/Equal_Rites.png">
-                                        <img class="slide" src="./Images/Mort.png">
-                                        <img class="slide" src="./Images/Guards_Guards_cover.png">
-                                        <img class="slide" src="./Images/Small_Gods.png">
-                                        <img class="slide" src="./Images/The_Wee_Free_Men.png">
-                                        <img class="slide" src="./Images/Going_Postal.png">
+                                        <div class="slide present bookcolour1">
+                                            <img class="coverimage" src="./Images/The_Colour_Of_Magic.png">
+                                            <p class="covertext" style="color: #ea523d;">The Colour Of Magic</p>
+                                            <p class="coverartist" style="color: #ea523d;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        <div class="slide bookcolour2">
+                                            <img class="coverimage" src="./Images/Equal_Rites.png">
+                                            <p class="covertext" style="color: #ffe830;">Equal Rites</p>
+                                            <p class="coverartist" style="color: #ffe830;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        <div class="slide bookcolour3">
+                                            <img class="coverimage" src="./Images/Mort.png">
+                                            <p class="covertext" style="color: #e0cc88;">Mort</p>
+                                            <p class="coverartist" style="color: #e0cc88;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        <div class="slide bookcolour4">
+                                            <img class="coverimage" src="./Images/Guards_Guards_cover.png">
+                                            <p class="covertext" style="color: #f7e227;">Guards! Guards!</p>
+                                            <p class="coverartist" style="color: #f7e227;">Illustrated by Joe McLaren</p>
+                                        </div> 
+                                        <div class="slide bookcolour5">
+                                            <img class="coverimage" src="./Images/Small_Gods.png">
+                                            <p class="covertext" style="color: #f5d71c;">Small Gods</p>
+                                            <p class="coverartist" style="color: #f5d71c;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        <div class="slide bookcolour6">
+                                            <img class="coverimage" src="./Images/The_Wee_Free_Men.png">
+                                            <p class="covertext" style="color: #333b52;">The Wee Free Men</p>
+                                            <p class="coverartist" style="color: #333b52;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        <div class="slide bookcolour7">
+                                            <img class="coverimage" src="./Images/The-Truth.png">
+                                            <p class="covertext" style="color: #ececfa;">The Truth</p>
+                                            <p class="coverartist" style="color: #ececfa;">Illustrated by Joe McLaren</p>
+                                        </div>
+                                        
+                                        
                                     </div>
                                     <div class="textslides">
                                         <div class="slide1 textdiv present bookcolour1 colorScheme1">The Colour of Magic</div>
