Completed the Static part

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         
                         <div id="pterrynamewrapper">
                             <h1 id="pterryname">Terence David John Pratchett</h1>
-                            <p>A funny man</p>
+                            <p>1948 - 2015</p>
                         </div>
                     </div>
                     
@@ -73,7 +73,26 @@
                                 <p class="discimagetext">The Discworld</p>
                                 <p class="discimagetext artist">Illustrated By josh kirby</p>
                             </div>
-                            <p class="discworldtext">This is an absurd fantasy world created by Terry Pratchett, to create satirical parellels with our real world. The series consists a total of 41 books. It starts from <span>The Colour OF Magic</span> to <span>The Sheperd's Crown</span> in the order of publication. But you dont have to read the Discworld in that order. The books follows many different stories and characters. The setting is the same but the stories are different. The whole Discworld can be seperated into many sub-series. </p>
+                            <p class="discworldtext">
+                                This is an absurd fantasy world created by Terry Pratchett, to create satirical parellels with our real world. 
+                                The series consists a total of 41 books. 
+                                It starts from <span>The Colour OF Magic</span> to <span>The Sheperd's Crown</span> in the order of publication,
+                                But the publication order is just a suggestion that you dont have to take seriously. 
+                                Every single book in discworld is written to be a stand alone read.
+                                But the whole series is not just 41 stand alone titles, 
+                                The whole Discworld can be divided into seperate story arcs which follow certain cast of characters through multiple books. 
+                            </br>
+                                These Story-arcs include :
+                                <br>1) Ankh-Morpork City Watch. <!-- having total of 7 books following theirs'(mostly Vime's) adventures in and sometimes outside of the City of Ankh-Morpork. -->
+                                <br>2) Death.
+                                <br>3) Witches.
+                                <br>Many) Rincewind,
+                                <br>Many-1) Tiffany Aching
+                                <br>Many-2) Industrial Revolution.
+                                <br>Many-3) Ancient Civilizations.
+                                <br>There are also few truly One-shot books that dont fit in any of the above Arcs.
+                                <br>The most appealing part of Discworld for me is that its Characters are not written to fit the World but the World is molded to fit the Characters.
+                            </p>
 
                         </div>                        
                     </div>
