completed the whole layout

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section id="section3" class="pageSection">
             <div class="sectionDiv">
                 <div class="upperDiv ">
-                    <p class="colorScheme present" id="booksheading">Books</p>
+                    <p class="colorScheme present" id="booksheading">Books (WIP)</p>
                 </div>
                 <div class="mainDiv" id="bookmaindiv">
                     <button id="previous" class="slidebutton prev" onclick="previousSlide()">&#10094</button>
